--- a/src/style.css
+++ b/src/style.css
@@ -7,12 +7,19 @@ body {
     margin: 0;
 }
 
+.container{
+    border: 2px solid lightgray;
+    max-width: 500px;
+    border-radius: 10px;
+}
 main {
     padding: 36px;
+    max-width: 500px;
 
 }
 
 .header {
+    max-width: 500px;
     display: flex;
     align-items: center;
     background: linear-gradient(90deg, #672280 1.18%, #A626D3 100%);
